# morgana

./: .gitignore  morgana.cabal  package.yaml  stack.yaml
app/: Main.hs
data/: Test.purs
elisp/: Cask  morgana.el
src/: Morgana.hs
src/Morgana/: Types.hs
tests/: Spec.hs
