name:                morgana
version:             0.1.0.0
synopsis:            Crazy magix
description:         Please see README.md
homepage:            https://github.com/kritzcreek/morgana#readme
license:             MIT
license-file:        LICENSE
author:              Christoph Hegemann
maintainer:          example@example.com
copyright:           2016 Christoph Hegemann
category:            Languages
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morgana
                       Morgana.Types
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , purescript >= 0.9.1
                     , text
                     , mtl
                     , zippers
                     , network
                     , lens
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TupleSections
                     , GADTs
                     , ViewPatterns
                     , LambdaCase
                     , FlexibleContexts
                     , TypeOperators
                     , TemplateHaskell
                     , GeneralizedNewtypeDeriving
                     , RankNTypes

executable mor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , morgana
                     , protolude
                     , purescript
                     , text
                     , network
                     , zippers
                     , lens
  default-language:    Haskell2010

test-suite morgana-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , psexp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kritzcreek/morgana
